JumpScript/tests/baselines/reference/contextuallyTypeCommaOperator03.errors.txt
tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator03.jump(3,6): error TS7006: Parameter 'a' implicitly has an 'any' type.


==== tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator03.jump (1 errors) ====
    let x: (a: string) => string;
    
    x = (a => a, b => b);
         ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.